--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,24 @@ h2 {
 
 h1 {
   font-family: cursive;
-  font-size: 2rem;
-  color: rgb(136, 236, 141)
+  font-size: 3rem;
+  color: rgb(136, 236, 141);
+  margin-top: 100px; 
 }
 
 p {
   font-size: 1.5rem;
 }
+
+#bprev, #bnext {
+  background-color: rgb(129, 51, 51);
+  color: white;
+  padding: 5px;
+  font-size: 10px;
+  margin-top: 5px
+}
+
+
 
 .what-to-do {
     font-family: sans-serif;
@@ -26,7 +37,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
 }
 
 #my-canvas {
@@ -50,7 +61,7 @@ p {
   }
 
   .ruin {
-    color:  rgb(130, 226, 162);
+    color: rgb(225, 236, 125);
     text-decoration-line: underline;
   }
 
@@ -66,4 +77,11 @@ p {
   #gameover-screen {
     display: none;
   }
- 
+
+  .intro-row {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 100px;;
+  }
