--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 
 body {
-    background-color: rgb(117, 39, 39);
+    background-color: black;
 }
 
 h2 {
@@ -14,38 +14,41 @@ h2 {
 
 h1 {
   font-family: 'Are You Serious', cursive;
-  font-size: 5rem;
+  font-size: 4em;
   color: rgb(136, 236, 141);
-  margin-top: 100px; 
+  margin-top: 3rem; 
 }
 
 p {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 
 .what-to-do, .congrats-txt {
     font-family: 'Kalam', cursive;
-    font-size: 3.5rem;
+    font-size: 2rem;
     color: whitesmoke;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center; 
-    padding-right: 20px;
+    padding-right: 2rem;
 }
 
 #my-canvas {
     background-color: rgb(129, 51, 51);
-    margin-top: -800;
+    margin-top: 3rem;
+    /*width: 80%; */
+
+
   }
   
   #start-btn, #restart-btn, #restart-btn2 {
-    background-color: #05500c;
+    background-color: rgb(201, 58, 58);
     color: white;
-    padding: 20px;
-    font-size: 20px;
-    margin-top: 40px
+    padding: 1rem;
+    font-size: 0.5rem;
+    margin-top: 2.0rem;
   }
   
   .container {
@@ -82,9 +85,9 @@ p {
   }
 
   .intro-row {
-    margin-top: 50px;
+    margin-top: 3rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    margin-bottom: 100px;
+    justify-content: center;
+    margin-bottom: 5rem;
   }
